// Original file: src/power-consumption/power.proto


export interface AllFieldResponse {
  'start'?: (string);
  'stop'?: (string);
  'time'?: (string);
  'measurement'?: (string);
  'globalActivePower'?: (string);
  'globalReactivePower'?: (string);
  'globalIntensity'?: (string);
  'subMetering_1'?: (string);
  'subMetering_2'?: (string);
  'subMetering_3'?: (string);
  'voltage'?: (string);
}

export interface AllFieldResponse__Output {
  'start': (string);
  'stop': (string);
  'time': (string);
  'measurement': (string);
  'globalActivePower': (string);
  'globalReactivePower': (string);
  'globalIntensity': (string);
  'subMetering_1': (string);
  'subMetering_2': (string);
  'subMetering_3': (string);
  'voltage': (string);
}
