// Original file: src/power-consumption/power.proto


export interface AllFieldValue {
  'start'?: (string);
  'stop'?: (string);
  'measurement'?: (string);
  'globalActivePower'?: (string);
  'globalReactivePower'?: (string);
  'globalIntensity'?: (string);
  'subMetering_1'?: (string);
  'subMetering_2'?: (string);
  'subMetering_3'?: (string);
  'voltage'?: (string);
}

export interface AllFieldValue__Output {
  'start': (string);
  'stop': (string);
  'measurement': (string);
  'globalActivePower': (string);
  'globalReactivePower': (string);
  'globalIntensity': (string);
  'subMetering_1': (string);
  'subMetering_2': (string);
  'subMetering_3': (string);
  'voltage': (string);
}
